--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,11 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '17'
+        distribution: 'temurin' # This specifies the distribution
+        java-version: 17
+        java-package: jdk
+        architecture: x64
+        check-latest: false
     - name: Build with Maven
       run: mvn clean install
     - name: Run tests
@@ -22,8 +26,9 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
         sonar-scanner \
-          -Dsonar.projectKey=myproject \
+          -Dsonar.projectKey=demo \
           -Dsonar.sources=. \
           -Dsonar.host.url=http://18.221.86.34:9000 \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
 
