--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,21 @@ jobs:
         java-package: jdk
         architecture: x64
         check-latest: false
+        
+    - name: Install Sonar Scanner
+      run: |
+        sudo apt-get install -y unzip
+        curl -sSLo /tmp/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.12008-linux.zip
+        sudo unzip -o /tmp/sonar-scanner-cli.zip -d /opt
+        sudo ln -s /opt/sonar-scanner-4.8.0.12008-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner
+        sonar-scanner -v  # Verify installation
+        
     - name: Build with Maven
       run: mvn clean install
+      
     - name: Run tests
       run: mvn test
+      
     - name: SonarQube Scan
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
