--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,14 @@ jobs:
     - name: Run tests
       run: mvn test
 
-    - name: Debug Path
+    - name: Install Sonar Scanner
       run: |
-        ls -l /opt/sonar-scanner-5.0.1.3006-linux/bin
-        echo $PATH
+        sudo apt-get update
+        sudo apt-get install -y unzip
+        curl -sSLo /tmp/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.12008-linux.zip
+        sudo unzip -q /tmp/sonar-scanner-cli.zip -d /opt
+        sudo ln -s /opt/sonar-scanner-4.8.0.12008-linux/bin/sonar-scanner /usr/local/bin/sonar-scanner
+        sonar-scanner -v  # Verify installation
       
     - name: SonarQube Scan
       env:
